// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolvers Pipeline Resovlers should generate Resources with default mapping templates 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "FieldName": "user",
      "Kind": "PIPELINE",
      "PipelineConfig": Object {
        "Functions": Array [
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction1",
              "FunctionId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction2",
              "FunctionId",
            ],
          },
        ],
      },
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/Query.user.request.vtl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/Query.user.response.vtl",
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Pipeline Resovlers should generate Resources with specific mapping templates 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "FieldName": "user",
      "Kind": "PIPELINE",
      "PipelineConfig": Object {
        "Functions": Array [
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction1",
              "FunctionId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction2",
              "FunctionId",
            ],
          },
        ],
      },
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/specific.request.tpl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/specific.response.tpl",
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Unit Resolvers should generate Resources with sync configuration 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [
      "GraphQlDsmyLambdaFunction",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DataSourceName": "myLambdaFunction",
      "FieldName": "user",
      "Kind": "UNIT",
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/Query.user.request.vtl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/Query.user.response.vtl",
      "SyncConfig": Object {
        "ConflictDetection": "VERSION",
        "ConflictHandler": "LAMBDA",
        "LambdaConflictHandlerConfig": Object {
          "LambdaConflictHandlerArn": Object {
            "Fn::GetAtt": Array [
              "QueryUnderscoreuserUnderscoreSyncLambdaFunction",
              "Arn",
            ],
          },
        },
      },
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Unit Resolvers should generate Resources with sync configuration 2`] = `
Object {
  "Query_user_Sync": Object {
    "handler": "index.handler",
  },
}
`;
